src/objects/Premier_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Amount__c</fullName>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Category__c</fullName>
        <description>See SFDC-10652</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Discount__c</fullName>
        <label>Benefit Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Changed from Text Area to Text (80 characters)
See SFDC-10652</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                    <default>true</default>
                    <label>Future</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Premier Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Benefit_Category__c</columns>
        <columns>Description__c</columns>
        <columns>Benefit_Type__c</columns>
        <columns>Benefit_Amount__c</columns>
        <columns>Benefit_Discount__c</columns>
        <columns>Benefit_Checkbox__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premier Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsCheckbox</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Checkbox&apos;) 

&amp;&amp; 

(Benefit_Checkbox__c = false

|| 

NOT(ISBLANK(Benefit_Amount__c))

|| 

NOT(ISBLANK(Benefit_Discount__c)))

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must check Benefit Checkbox. Benefit Amount and Benefit Discount is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsCurrency</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Currency&apos;)

&amp;&amp; 

(ISBLANK(Benefit_Amount__c) 

||

(NOT(ISBLANK( Benefit_Discount__c)) 

||
 
Benefit_Checkbox__c = true))

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must enter a Benefit Amount. Benefit Discount and Benefit Checkbox is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premier_WhenBenefitTypeIsDiscount</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Benefit_Type__c , &apos;Discount&apos;) 

&amp;&amp; 

(ISBLANK(Benefit_Discount__c) 

|| 

NOT(ISBLANK(Benefit_Amount__c)) 

|| 

Benefit_Checkbox__c = true)

&amp;&amp; 

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)</errorConditionFormula>
        <errorMessage>You must enter a Benefit Discount. Benefit Amount and Benefit Checkbox is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Active_Benefit_Validation</fullName>
        <active>true</active>
        <description>Only End Date can be changed on an Active Premier Benefit</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Active&apos;) &amp;&amp;

OR(ISCHANGED(Name),
ISCHANGED(Benefit_Category__c),
ISCHANGED(Description__c),
ISCHANGED(Benefit_Type__c),
ISCHANGED(Benefit_Amount__c),
ISCHANGED(Benefit_Discount__c),
ISCHANGED(Benefit_Checkbox__c),
ISCHANGED(Effective_Date__c)
)
&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;,
								$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Only End Date can be changed on an Active Premier Benefit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Effective_Date_Validation</fullName>
        <active>true</active>
        <description>Error when user tries to enter an Effective date in the past or today.</description>
        <errorConditionFormula>OR(ISNEW(),
ISCHANGED(Effective_Date__c))
&amp;&amp;
Effective_Date__c &lt;= Today()
&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>You cannot enter an Effective Date as of today or in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_End_Date_Validation</fullName>
        <active>true</active>
        <description>Error when End Date is less than or equal to effective date</description>
        <errorConditionFormula>OR(ISNEW(),
ISCHANGED(End_Date__c))
&amp;&amp;
(End_Date__c &lt;=  Effective_Date__c ||  End_Date__c  &lt;=  TODAY() )
&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You cannot enter an End Date the same or earlier than Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Inactive_Benefit_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Inactive&apos;) &amp;&amp; 

OR(ISCHANGED(Name), 
ISCHANGED(Benefit_Category__c),
ISCHANGED(Description__c), 
ISCHANGED(Benefit_Type__c), 
ISCHANGED(Benefit_Amount__c), 
ISCHANGED(Benefit_Discount__c), 
ISCHANGED(Benefit_Checkbox__c), 
ISCHANGED(Effective_Date__c), 
ISCHANGED(End_Date__c) 
) 
&amp;&amp; 
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorMessage>You cannot make changes to an Inactive benefit</errorMessage>
    </validationRules>
</CustomObject>